<resources>
    <string name="app_name">MyBiochemistry</string>
    <string name="login_passed">LoginPassed</string>
    <string name="app_token">app_token</string>
    <string name="crypt_token">crypt_token</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">В разработке</string>
    <string name="main_name">Моя Биохимия</string>
    <string name="Auth">Авторизация</string>
    <string name="pass_hint">********</string>
    <string name="person_name">Имя пользователя</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="mail">Эл.почта</string>
    <string name="Wellcome">Добро пожаловать!</string>
    <string name="intro_text">С помощью нашего приложения вы можете узнать гораздо больше о биохимии и её аспектах</string>
    <string name="go_to_biochemistry">Перейти к\nразделам БХ</string>
    <string name="subscription">Подписка</string>
    <string name="activated">Активна</string>
    <string name="test_date">12.03.2024</string>
    <string name="ending">окончания</string>
    <string name="date">дата</string>
    <string name="subscribe">подписки</string>
    <string name="biochemistry_list">Разделы биохимии</string>
    <string name="protein">Белки</string>
    <string name="more_about_course">Подробнее о курсе</string>
    <string name="settings">Настройки</string>
    <string name="enter_promo">Ввести промокод</string>
    <string name="logout">Выйти</string>
    <string name="empty_string"></string>
    <string name="confidential_policy">Политика конфиденциальности</string>
    <string name="enter_correct_email">Введите корректную почту\n</string>
    <string name="enter_email">Введите свою почту</string>
    <string name="you_have_been_successfully_authorised">Авторизация прошла успешно</string>
    <string name="failed_to_authorize">Ошибка при авторизации\n\n</string>
    <string name="enter_the_password">Поле пароля не должно быть пустым\n</string>
    <string name="smth_went_wrong">Что-то пошло не так</string>
    <string name="registered_successfully">Регистрация прошла успешно</string>
    <string name="password_must_be_6_symbols_at_least">Пароль должен сожержать хотя бы 6 символов</string>
    <string name="nickname_is_empty">Поле имени не должно быть пустым</string>
    <string name="is_not_active">Не активна</string>
    <string name="successfully_authorised">Вы успешно авторизованы</string>
</resources>